Fixed code smell - Deprecated method